<resources>
    <string name="app_name">Meliora Scheduler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Login</string>
    <string name="email">Email</string>
    <string name="slogan">ever better!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="logo">logo</string>
    <string name="logo_image">Logo image</string>
    <string name="recover_password">Recover Password</string>
    <string name="create_accountTextView">Create Account</string>
    <string name="CreateAccount_name">Name</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="background_image">Background Image</string>
    <string name="nav_home">Home</string>
    <string name="nav_appointment_history">Appointment History</string>
    <string name="nav_book_appointment">Book Appointment</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>
    <string name="Home_no_upcoming_appointment">No Upcoming Appointment</string>
    <string name="search">Search</string>
    <string name="book_continue">Continue</string>
    <string name="officehrs">Office Hours:</string>
    <string name="select_appointment_date">Select Appointment Date/Time</string>
    <string name="back">Back</string>
    <string name="schedule_for">\'s schedule for</string>
    <string name="date_button_image">Date Button Image</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="appointment_with">Appointment With</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="appointment_has_been_scheduled">Appointment has been scheduled!</string>
    <string name="reason_for_appointment">Reason for Appointment</string>
    <string name="comfirm">Confirm</string>
    <string name="upcoming_appointment_s">Upcoming Appointment(s)</string>
    <string name="reason_for_cancelation">Reason for cancelation</string>
    <string name="cancel">Cancel</string>
    <string name="App_cancel"><u>Cancel</u></string>
    <string name="appointment">Appointment</string>
    <string name="office_location">Office Location</string>
    <string name="ok">OK</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="no_appointment_history">No Appointment History</string>
    <string name="appointment_history">Appointment History</string>
    <string name="invitation_message">Check out Meliora Scheduler, an easy way to schedule appointment with your professor</string>

</resources>
