<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_ico"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_ico"
            android:title="@string/nav_appointment_history" />
        <item
            android:id="@+id/nav_book_appointment"
            android:icon="@drawable/book_app_ico"
            android:title="@string/nav_book_appointment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_ico"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
