<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appointPop_AppointmentHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/appointment"
            android:textSize="20sp"
            android:background="#3d6b8e"
            android:textColor="#fcfcfa"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appointment_with"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#040404"/>
        <TextView
            android:id="@+id/appointPop_ProfNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/office_location"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#040404"/>
        <TextView
            android:id="@+id/appointPop_OfficeLocTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#040404"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/appointPop_ProfDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#040404"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/appointPop_ProfTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/appointPop_ReasonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_for_appointment"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#040404"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/appointPop_ProfReasonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="center" />


    </LinearLayout>


    <Button
        android:id="@+id/appoint_pop_okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_c"
        android:text="@string/ok"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarButtonStyle"
        android:textSize="18sp" />

</RelativeLayout>