<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context="edu.rochester.meliorascheduler.Login.LoginFragment">
    <requestFocus />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ur8"
        android:contentDescription="@string/background_image" />

    <LinearLayout
        android:id="@+id/Login_mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_above="@id/Login_CardView"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Login_headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/login_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>
    
    <android.support.v7.widget.CardView
        android:id="@+id/Login_CardView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Login_UserIDEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"/>

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Login_PasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/Login_SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@drawable/button_c"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/Login_createAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/Login_CardView">

        <TextView
            android:id="@+id/Login_ForgotPassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/Login_CreateAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>




</RelativeLayout>
