<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="edu.rochester.meliorascheduler.Appointment.BookAppointment.ComfirmFragment">

    <TextView
        android:id="@+id/comfirm_SuccessTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/appointment_has_been_scheduled"
        android:textSize="20sp"
        android:textColor="#076b11"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/comfirm_CardView"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:id="@+id/comfirm_CardView"
        android:layout_width="350dp"
        android:layout_height="380dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="5dp"
        android:layout_centerInParent="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comfirm_ComfirmTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/confirm_appointment"
                android:textSize="20sp"
                android:background="#3d6b8e"
                android:textColor="#fcfcfa"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_with"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="#040404"/>
            <TextView
                android:id="@+id/comfirm_profName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alex Ferguson"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#040404"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/comfirm_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tue, Sept. 29th 2017"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#040404"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/comfirm_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10:30AM"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason_for_appointment"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#040404"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/comfirm_ReasonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:textAlignment="center"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/comfirm_Reason"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textMultiLine"
                android:background="@drawable/text_field_background"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/comfirm_ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/comfirm_backButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_c"
            android:text="@string/back"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

        <Button
            android:id="@+id/comfirm_SubmitButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_c"
            android:text="@string/comfirm"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
