<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rochester.meliorascheduler.SplashScreen.SplashScreenFragment">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ur8"
        android:contentDescription="@string/background_image" />

    <ProgressBar
        android:id="@+id/customer_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="196dp"/>

    <LinearLayout
        android:id="@+id/Login_mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:layout_above="@id/Login_CardView"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Login_headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="#f9f7f7"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/login_slogan"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="#f5f3f2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>
