<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rochester.meliorascheduler.Appointment.BookAppointment.SelectDateFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_appointment_date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:id="@+id/DateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView">

        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="60dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/selectDate_DateTexView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="YYYY-MM-DD"
                android:inputType="date"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:enabled="false"
                android:textColor="#060606"
                android:background="@drawable/button_background"
                android:paddingLeft="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/selectDate_DateButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/date_button_image"
            android:src="@mipmap/date_ico"
            android:background="@android:color/transparent"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selectDate_TimeDisplayRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DateLayout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="55dp">

    </android.support.v7.widget.RecyclerView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/selectDate_backeButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_c"
            android:text="@string/back"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

        <Button
            android:id="@+id/selectDate_continueButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_c"
            android:text="@string/book_continue"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
