<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/currentAppoint_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#3d6b8e">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/date"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/appointment_with"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text=""
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/currentAppoint_Header">

        <TextView
            android:id="@+id/home_dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/date"
            android:textColor="#050505"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/home_AppointmentWithTextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Appointment with"
            android:textColor="#050505"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/home_CancelTextView"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.2"
            android:text="@string/App_cancel"
            android:textColor="#b40606"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>